Fixed sidebar and report alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,7 +39,7 @@ h2 {
 .sidenav {
 	height:100%;
 	width: 230px;
-	position: fixed;
+	position: absolute;
 	z-index:1;
 	top: 70px;
 	left:0;
